Bug 978767 - "Hovering over the zoom controls and cut/copy/paste in the menu on Linux makes the panel layout jump" [r=mdeboer]
UltraBlame original commit: 6dd7b0359a89c96eecf811431849f05153cdbe8c

--- a/browser/themes/shared/customizableui/panelUIOverlay.inc.css
+++ b/browser/themes/shared/customizableui/panelUIOverlay.inc.css
@@ -810,7 +810,13 @@ toolbarpaletteitem[place="palette"] > #search-container {
 }
 
 .toolbaritem-combined-buttons@inAnyPanel@ > separator {
-  margin: .5em 0;
+  
+
+
+
+
+
+  margin: calc(0.5em - 1px) 0;
   width: 1px;
   background: hsla(210,4%,10%,.15);
   transition-property: margin;
